--- a/app/styles/_helpers.scss
+++ b/app/styles/_helpers.scss
@@ -1,2 +1,31 @@
 // Custom helper functions
+@import "variables";
 
+
+
+// Iterate over all queries, changing a single value each time.
+// To use: @include each-query($property, $values)
+@mixin each-query($property, $values, $the-queries:$queries) {
+  @each $query, $value in zip($the-queries, $values){
+    @include media($query){
+      #{$property}: $value;
+    }    
+  }
+}
+
+@mixin show-queries{
+  content:'';
+  width: 100%;
+  height: 10px;
+  display: block;
+  position: fixed;
+  bottom: 0;
+  z-index: 2;
+  $bar-colors: red, orange, yellow, green;
+  @include each-query(background, $bar-colors);
+}
+
+%show-queries{
+	@include show-queries;
+
+}
