--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,115 +3,66 @@
 @import "neat/app/assets/stylesheets/_neat.scss";
 // endbower
 @import "reset";
-@import "helpers";
 @import "variables";
+@import "helpers";
 
-/*
-Colors: color-desat, color-bright, color-dark
-Fonts: mono
+/* Switches */
+$show-media-queries: off;
 
-*/
-// EXTENDS
 
-$grandkid: new-breakpoint(min-width 0px);
-$daughter: new-breakpoint(min-width 481px);
-$mother: new-breakpoint(min-width 1000px);
-$grandma: new-breakpoint(min-width 1201px);
+// Typography
 
-%site-title {
-  @extend %mono-bold;
-  font-size: rem(36);
-  text-transform: uppercase;
-}
-
-%title {
+%title-font {
   @extend %mono-bold;
 }
+%body-font {
+  @extend %mono-regular;
+}
 
-///
+
+//
 
 body {
   @extend %mono-regular;
   background: $color-base;
   color: $color-dark;
-}
-
-
-$queries: $grandkid, $daughter, $mother, $grandma;
-
-@mixin each-query($property, $values, $the-queries:$queries) {
-  @each $query, $value in ($the-queries, $values){
-    @include media(#{$query}){
-      #{$property}: $value;
-    }    
-  }
-}
-
-@mixin show-queries{
-  content:'';
-  width: 100%;
-  height: 10px;
-  display: block;
-  position: fixed;
-  bottom: 0;
-  z-index: 2;
-  $bar-colors: red, orange, yellow, green;
-  @include each-query(background, $bar-colors);
-}
-
-
-body {
-  /*@include media($grandkid){
-      &:before{
-        @include show-media-queries--bar;
-        background: red;
-      }
-  @include media($daughter){
-      &:before{
-       @include show-media-queries--bar;
-        background: orange;
-      }
-  }
-  @include media($mother){
-      &:before{
-         @include show-media-queries--bar;
-        background: yellow;
-      }
-  }
-  @include media($grandma){
-        &:before{
-         @include show-media-queries--bar;
-        background: green;
-      }
-  }
-  }*/
   &:before{
-    @include show-queries;
+    @if ($show-media-queries == "on"){
+      @include show-queries;
+    }
   }
 }
 
+h1 {
+  @extend %title-font;
+}
 
+p {
+  @extend %body-font;
+}
 
 header h1 {
-  @extend %site-title;
+  font-size: rem(36);
+  text-transform: uppercase;
 }
 
 div.title-container {
   @include span-columns(4 of 12);
 }
+
 div.about-container {
   @include span-columns(8 of 12);
 }
 
-p {
-  @extend %mono-regular;
+
+header p {
   font-size: rem(18);
 }
 
 header { 
   @include outer-container;
   background: $color-light;
-  height: rem(200);
+  height: 40%;
   width: 100%;
 }
 
