--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,9 +6,12 @@
 @import "variables";
 @import "helpers";
 
-/* Switches */
-$show-media-queries: off;
 
+
+/* Switches */
+/* Debugging tools (uncommenting + recommenting repeatedly is boring) */
+$show-media-queries: on;
+// todo: add $show-element-borders;
 
 // Typography
 
@@ -18,9 +21,82 @@ $show-media-queries: off;
 %body-font {
   @extend %mono-regular;
 }
+%site-title-font {
+  @extend %title-font;
+  font-size: rem(36);
+  text-transform: uppercase;
+}
 
+%site-description-font {
+  @extend %body-font;
+  font-size: rem(18);
+}
 
-//
+@include keyframes(fadeShrink) {
+  0% { 
+      width: 90% ;
+      margin: 0 5%;
+      background: $color-base;
+      height: 2px;
+  }
+  30% {
+      height: 5px;
+      width: 90%;
+      margin: 0 5%;
+      background: $color-base;
+  }
+  70% { width: 100% ;
+        margin: 0;
+        height: 3px;
+    }
+  100% { width: 50% ;
+         margin: 0 25%;
+         background: $color-light;
+         height: 1px;
+    }
+}
+@include keyframes(colorFade) {
+  0% {
+    color: $color-base;
+  }
+  30% {
+    color: lighten($color-base, 50%);
+  }
+  50% {
+    color: darken($color-base, 10%);
+  }
+  100% {
+    color: $color-base;
+  }
+}
+
+%link-animation {
+    &:after {
+    content: '';
+    width: 90%;
+    margin: 0 5%;
+    height: 2px;
+    background: $color-base;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    //transition: all .4s ease;
+  }
+  &:hover {
+    &:after { 
+      //background: $color-light;
+//      width: 50%;
+      //margin: 0 25%;
+      background: $color-light;
+      @include animation(fadeShrink .8s ease);
+    }
+  }
+  &:active {
+    @include animation(colorFade .2s ease);
+  }
+}
+
+// todo: move above to @imports
 
 body {
   @extend %mono-regular;
@@ -36,27 +112,20 @@ body {
 h1 {
   @extend %title-font;
 }
+h2 {
+  @extend %title-font;
+}
 
 p {
   @extend %body-font;
 }
 
-header h1 {
-  font-size: rem(36);
-  text-transform: uppercase;
-}
-
-div.title-container {
-  @include span-columns(4 of 12);
-}
-
-div.about-container {
-  @include span-columns(8 of 12);
-}
-
-
-header p {
-  font-size: rem(18);
+a {
+  @extend %body-font;
+  text-decoration: none;
+  color: $color-base;
+  display: inline-block;
+  position: relative;
 }
 
 header { 
@@ -65,6 +134,68 @@ header {
   height: 40%;
   width: 100%;
 }
+
+header{
+  padding: 3rem;
+}
+
+header h1 {
+  @extend %site-title-font;
+}
+
+header p {
+  @extend %site-description-font;
+}
+
+header p a {
+  @extend %link-animation;
+}
+
+div.title-container {
+  @include span-columns(3 of 12);
+}
+
+div.about-container {
+  @include span-columns(6 of 12);
+  @include shift(3);
+}
+
+section {
+  padding: 3rem;
+  overflow-x: scroll;
+}
+
+div.portfolio-item {
+  width: 20rem;
+  height: 20rem;
+  border: 1px solid $color-light;
+  background: $color-base;
+  padding: 5px;
+  float: left;
+  margin: 1rem;
+  > div {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.portfolio-item h2 {
+  color: $color-base;
+  line-height: 4.5rem;
+  margin-left: 1rem;
+  float: left;
+  font-size: rem(18);
+}
+.portfolio-item p {
+  line-height: 4.5rem;
+  font-size: rem(18);
+  }
+
+div[data-site="blaudit"] {
+  @include linear-gradient(to right, #FFA794, #FFC98E);
+}
+
+
 
 .browsehappy {
   margin: 0.2em 0;
