Cleaned, stable version

--- a/app/styles/modules/_typography.scss
+++ b/app/styles/modules/_typography.scss
@@ -101,6 +101,9 @@ section.projects span {
   font-size: rem(16);
   margin-bottom: rem(16);
   display: inline-block;
+  @include media($daughter){
+    font-weight: 700;
+  }
 }
 
 section h2 {
@@ -120,18 +123,23 @@ section h2 {
   p {
     margin-bottom: rem(16);
   }
-  a {
-
+  span {
+    display: inline-block;
   }
 }
 
 a.email {
   margin-left: .9rem;
+  @include media($daughter) {
+    margin-left: 1.25rem;
+  }
 }
 a.github {
   margin-left: .4rem;
+  @include media($daughter) {
+    margin-left: .65rem;
+  }
 }
-
-.link-segment {
-  margin-right: rem(6);
+.column-etc > span {
+  margin: 0 .5rem .5rem 0;
 }
