--- a/app/styles/partials/_projects.scss
+++ b/app/styles/partials/_projects.scss
@@ -1,8 +1,6 @@
 
 
 .project {
-  width: 15rem;
-  height: 15rem;
   float: left;
   background: blue;
   margin: 2rem;
@@ -10,7 +8,19 @@
   position: relative;
   @include media($grandkid){
     margin: 1rem auto;
-    float: center;
+    width: 100%;
+    height: 10rem;
+  }
+  @include media($daughter){
+    height: 15rem;
+    @include span-columns(6);
+    &:nth-child(3), &:nth-child(5){
+      margin-right: 0;
+    }
+  }
+  @include media($mother){
+    &:nth-child(3) { margin-right: 2.3%; }
+    @include span-columns(3);
   }
 }
 
@@ -39,7 +49,7 @@
 }
 
 .project-modular {
-  background: #666666;
+  background: #999999;
   z-index: 1;
   position: relative;
   &:before {
@@ -68,7 +78,7 @@
     font-size: 3rem;
     overflow: hidden;
     width: 100%;
-    height: 18%;
+    height: 25%;
     z-index: 2;
     position: absolute;
     bottom: 0;
@@ -86,10 +96,4 @@
   position: absolute;
   bottom: .5rem;
   right: .5rem;
-  @include media($grandkid){ 
-    background: $color-base;
-  }
-  @include media($daughter){
-
-  }
 }
