--- a/app/styles/modules/_helpers.scss
+++ b/app/styles/modules/_helpers.scss
@@ -3,12 +3,8 @@
 // Dependencies
 	@import "variables";
 
-
-
-
-
 // Iterate over all queries, changing a single value each time.
-// To use: @include sh
+// example: @include each-query(margin-bottom, (1rem, 2rem, 2rem, 3rem));
 	@mixin each-query($property, $values, $the-queries:$queries) {
 	  @each $query, $value in zip($the-queries, $values){
 	    @include media($query){
@@ -18,7 +14,7 @@
 	}
 
 // Show a colored bar signifying which media query is active
-// To use: @include show-queries, or see Switches (in main.scss)
+// To use: @include show-queries, or see debug switches (in main.scss)
 	// todo: make placement-agnostic
 	@mixin show-queries{
 	  content:'';
@@ -32,7 +28,7 @@
 	  @include each-query(background, $bar-colors);
 	}
 
-	@mixin debug-borders {
+@mixin debug-borders {
   body {
     * { border: 3px solid red; }
     * > * { border: 2px solid orange; }
@@ -40,8 +36,6 @@
     * > * > * > * { border: 1px solid green; }
   }
 }
-
-
 @mixin debug-media {
   body:before{
     @include show-queries;
