--- a/app/styles/partials/_top.scss
+++ b/app/styles/partials/_top.scss
@@ -60,7 +60,7 @@ header {
       display:inline-block;
       position:absolute;
       opacity: 0;
-      transition: all 1s ease;
+      transition: all .8s ease-out;
     }
     &:before{
       content:'<';
