new animations, ui tweaks, refactoring

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,12 +14,10 @@
 @import "partials/general";
 @import "partials/top";
 @import "partials/projects";
+@import "partials/animation-section";
+@import "partials/footer";
 
 // Debugging tools -- located in _helpers 
 //@include debug-borders;
 //@include debug-media;
-
-
-
-
 
