--- a/app/styles/modules/_variables.scss
+++ b/app/styles/modules/_variables.scss
@@ -18,11 +18,13 @@
 		$pink-salmon: rgba(255, 130, 115, 1);
 		$gray: rgba(230, 230, 230, 1);
 		$black: rgba(0, 0, 0, 1);
+		$birdblue: rgba(163, 226, 239, 1);
 
 	// Semantic + Generic
 		$color-light: $pink-salmon;
 		$color-base: $gray;
 		$color-dark: $black;
+		$color-highlight: $birdblue;
 
 
 // --- Fonts ---
