--- a/app/styles/modules/_helpers.scss
+++ b/app/styles/modules/_helpers.scss
@@ -13,6 +13,28 @@
 	}
 }
 
+@mixin double-shadow($content, $color1, $color2, $color3) {
+  color: $color1;
+  position: relative;
+  z-index: 1;
+  &:after {
+    content: '#{$content}';
+    position: absolute;
+    top: 2px;
+    left: 0;
+    z-index: -1;
+    color: $color2;;
+  }
+  &:before {
+    content: '#{$content}';
+    position: absolute;
+    top: 4px;
+    left: 0;
+    z-index: -2;
+    color: $color3;
+  }
+}
+
 // Show a colored bar signifying which media query is active
 // To use: @include show-queries, or see debug switches (in main.scss)
 	// todo: make placement-agnostic
