--- a/app/styles/partials/_projects.scss
+++ b/app/styles/partials/_projects.scss
@@ -1,9 +1,14 @@
+section.projects {
+  position: relative;
+}
+
 .project {
   float: left;
   background: blue;
   margin: 2rem;
   padding: .5rem;
   position: relative;
+  transition: all 1.5s ease-in-out;
   @include media($grandkid){
     margin: 1rem auto;
     width: 100%;
@@ -20,7 +25,27 @@
     &:nth-child(3) { margin-right: 2.3%; }
     @include span-columns(3);
   }
+  &:hover {
+    box-shadow: 0px 2px 0px $pink-salmon;
+  }
 }
+
+// 
+
+.projects .section-header {
+  padding: 0;
+  position: relative;
+  height: 5rem;
+}
+
+.projects h1 {
+  position: relative;
+  display: inline-block;
+  z-index: 3;
+  @include clearfix;
+}
+
+
 
 
 // TODO: abstract project cards
@@ -52,15 +77,15 @@
                           linear-gradient(to right, #9e005d 87.5%, #9e005d 100%, transparent 20%)
     );
   }
-
-  span, p, a {
-    position: relative;
-    z-index: 3;
-  }
-  span, p {
+  .project span, p {
     background: rgba(255,255,255,0.5);
   }
 }
+
+  .project span, p, a {
+    position: relative;
+    z-index: 3;
+  }
 
 .project-sunlight {
     background: #a6cbcd;
@@ -77,10 +102,6 @@
       top: 20%;
       left: 40%;
     }
-    span, p, a {
-      z-index: 3;
-      position: relative;
-    }
 }
 
 .project-modular {
@@ -96,10 +117,6 @@
     position: absolute;
     top: 0;
     left: 0;
-  }
-  span, p, a {
-    z-index: 3;
-    position: relative;
   }
 }
 
@@ -119,10 +136,6 @@
     bottom: 0;
     left: 0;
     opacity: .1;
-  }
-    span, p, a {
-    z-index: 3;
-    position: relative;
   }
 }
 
