--- a/app/styles/partials/_projects.scss
+++ b/app/styles/partials/_projects.scss
@@ -67,15 +67,14 @@ section.projects {
     position: absolute;
     top: 0;
     left: 0;
-    @include background-image(linear-gradient(to right, #fbb03b 0%, #fbb03b 12.5%, transparent 0%),
+    background-image: linear-gradient(to right, #fbb03b 0%, #fbb03b 12.5%, transparent 0%),
                           linear-gradient(to right, #f7931e 12.5%, #f7931e 25%, transparent 20%),
                           linear-gradient(to right, #fcee21 25%, #fcee21 37.5%, transparent 20%),
                           linear-gradient(to right, #d9e021 37.5%, #d9e021 50%, transparent 20%),
                           linear-gradient(to right, #CCCCCC 50%, #CCCCCC 62.5%, transparent 20%),
                           linear-gradient(to right, #808080 62.5%, #808080 75%, transparent 20%),
                           linear-gradient(to right, #d4145a 75%, #d4145a 87.5%, transparent 20%),
-                          linear-gradient(to right, #9e005d 87.5%, #9e005d 100%, transparent 20%)
-    );
+                          linear-gradient(to right, #9e005d 87.5%, #9e005d 100%, transparent 20%);
   }
   .project span, p {
     background: rgba(255,255,255,0.5);
