--- a/app/styles/modules/_typography.scss
+++ b/app/styles/modules/_typography.scss
@@ -89,7 +89,7 @@ section h2 {
 }
 
 .intro {
-    @include media($grandkid) { 
+    @include media($grandkid) {
     br { display: none; }
   }
   @include media($daughter) {
@@ -106,6 +106,7 @@ section h2 {
   }
 }
 
+/*
 a.email {
   margin-left: .9rem;
   @include media($daughter) {
@@ -118,6 +119,14 @@ a.github {
     margin-left: .65rem;
   }
 }
+*/
+
 .column-etc > span {
   margin: 0 .5rem .5rem 0;
+  &:after{
+    content:'/';
+    position: relative;
+    left: .65rem;
+    color: $color-base;
+  }
 }
