--- a/app/styles/partials/_projects.scss
+++ b/app/styles/partials/_projects.scss
@@ -5,55 +5,58 @@ section.projects {
 .project {
   float: left;
   background: blue;
-  margin: 2rem;
-  padding: .5rem;
+  //margin: 2rem;
+  margin: 0;
+  padding: 3rem;
   position: relative;
   transition: all 1.5s ease-in-out;
   @include media($grandkid){
     margin: 1rem auto;
+    margin: 0;
     width: 100%;
     height: 10rem;
   }
   @include media($daughter){
-    height: 15rem;
-    @include span-columns(6);
+    height: 10rem;
+    //@include span-columns(6);
     &:nth-child(3), &:nth-child(5){
       margin-right: 0;
     }
+    @include span-columns(12);
   }
   @include media($mother){
     &:nth-child(3) { margin-right: 2.3%; }
-    @include span-columns(3);
+    //@include span-columns(3);
+    @include span-columns(12);
   }
   &:hover {
     box-shadow: 0px 2px 0px $pink-salmon;
   }
 }
 
-// 
 
 .projects .section-header {
-  padding: 0;
+  padding: 0 3rem;
   position: relative;
-  height: 5rem;
+  height: 7rem;
+  text-align: center;
 }
 
 .projects h1 {
   position: relative;
   display: inline-block;
   z-index: 3;
+  line-height: 7rem;
   @include clearfix;
+
 }
-
-
-
 
 // TODO: abstract project cards
 
 .project-blaudit{
     @include linear-gradient(to right, #ffa794, #ffc98e);
   }
-  
+
 .project-colorstreamer{
   // Multiple linear-gradients - Demo
   position: relative;
